--- a/package.json
+++ b/package.json
@@ -8,10 +8,15 @@
   },
   "dependencies": {
     "body-parser": "1.19.0",
-    "express": "4.17.1"
+    "express": "4.17.1",
+    "follow-redirects": "1.10.0",
+    "unirest": "0.6.0"
   },
   "devDependencies": {
     "nodemon": "1.18.4"
   },
   "keywords": []
-}}
+} "1.18.4"
+  },
+  "keywords": []
+}
